# scripted_demos

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripted_demos/: cli.py  parse_line.py  utilities.py
tests/: test_scripted_demos.py
